gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/self-referential-2_dg.rs
//@ revisions: current next
//@ ignore-compare-mode-next-solver (explicit revisions)
//@[next] compile-flags: -Znext-solver
//@[next] check-pass
#![feature(type_alias_impl_trait)]

type Foo = impl std::fmt::Debug;
type Bar = impl PartialEq<Foo>;

fn bar() -> Bar {
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

